[package]
name = "github-rpo-stars"
version = "0.1.0"
authors = ["Naaman <naaman.the.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
chrono = { version = "0.4.15", features = ["serde"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
colored = "2.0.0"
thiserror = "1.0.20"
lazy_static = "1.4.0"
reqwest = {version = "0.10.8", features = ["json"] }
tokio = { version = "0.2.22", features = ["macros"] }
toml = "0.5.6"

